# rhino-suite

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  docker-compose.yml  go.work  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml  security.yml  stale.yml  workflow-security.yml
.pnpm-store/v11/: index.db
apps/api/: Dockerfile  go.mod  openapi.yaml
apps/api/cmd/server/: main.go
apps/api/internal/auth/: auth.go  auth_test.go  store.go
apps/api/internal/document/: derive.go  derive_test.go  model.go  store.go  versions_test.go
apps/api/internal/httpapi/: accounts.go  handler.go  handler_test.go  sharing.go
apps/desktop/: README.md
apps/web/: Dockerfile  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  main.tsx  routing.ts  shell.css  styles.css
apps/web/src/auth/: SignInScreen.tsx
apps/web/src/branding/: RhinoMark.tsx
apps/web/src/drive/: DriveView.tsx  ShareDialog.tsx
apps/web/src/editor/: DocumentEditor.tsx  EditorIcons.tsx  VersionHistory.tsx  domSelection.ts
apps/web/src/settings/: SettingsContext.tsx  (+1 more)
crates/office-core/: Cargo.toml
crates/office-core/src/: lib.rs
crates/office-wasm/: Cargo.toml
crates/office-wasm/src/: lib.rs
deploy/: nginx.conf
docs/: API.md  ARCHITECTURE.md  DELIVERY_STATUS.md  FAQ.md  FORMAT_COMPATIBILITY.md  GETTING_STARTED.md  GLOSSARY.md  INDEX.md  INTERNAL_FORMAT.md  LOCAL_VALIDATION_RESULT.md  PHASES.md  PHASE_2.md  REVIEW_MODEL.md  ROADMAP.md  VALIDATION.md
docs/adr/: 0001-rust-core.md  0002-go-services.md  0003-internal-format.md  0004-phase-delivery.md  0005-structured-editor-input.md  0006-structured-fragments-and-resources.md  0007-section-aware-layout.md  0008-review-and-office-interchange.md  0009-accounts-and-sharing.md
formats/: README.md
scripts/: build-wasm.mjs  validate-phase23.ts  validate-phase24.ts
