[package]
name = "office-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Núcleo documental independiente de plataforma para Web Office Suite."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
