[package]
name = "office-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bindings WebAssembly del núcleo de Rhino Suite."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
office-core = { path = "../office-core" }
serde_json = "1"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
