[package]
name = "office-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bindings WebAssembly del núcleo de Rhino Suite."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
office-core = { path = "../office-core" }
serde_json = "1"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
# rustc moderno emite instrucciones post-MVP (bulk-memory, sign-ext, etc.) por
# defecto; el wasm-opt que trae wasm-pack valida en MVP y las rechaza. Se
# habilitan explícitamente para que la pasada -Oz no falle.
wasm-opt = [
  "-Oz",
  "--enable-bulk-memory",
  "--enable-sign-ext",
  "--enable-mutable-globals",
  "--enable-nontrapping-float-to-int",
]
